MET-4157 Cleanup and more tests