@@ -1,6 +1,7 @@
 package eu.europeana.indexing.tiers.model;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -10,8 +11,8 @@ import eu.europeana.indexing.tiers.metadata.EnablingElementsClassifier;
 import eu.europeana.indexing.tiers.metadata.LanguageClassifier;
 import eu.europeana.indexing.tiers.metadata.LanguageTagStatistics.PropertyType;
 import eu.europeana.indexing.tiers.model.TierClassifier.TierClassification;
-import eu.europeana.indexing.tiers.view.ContextualClasses;
-import eu.europeana.indexing.tiers.view.EnablingElements;
+import eu.europeana.indexing.tiers.view.ContextualClassesBreakdown;
+import eu.europeana.indexing.tiers.view.EnablingElementsBreakdown;
 import eu.europeana.indexing.tiers.view.LanguageBreakdown;
 import eu.europeana.indexing.tiers.view.MetadataTierBreakdown;
 import eu.europeana.indexing.utils.RdfWrapper;
@@ -33,26 +34,25 @@ public class MetadataClassifierTest {
     final ContextualClassesClassifier contextualClassesClassifier = mock(ContextualClassesClassifier.class);
 
     // The tiers
-    final MetadataTier lowTier = MetadataTier.T0;
-    final MetadataTier middleTier = MetadataTier.TA;
-    final MetadataTier highTier = MetadataTier.TC;
+    final Tier lowTier = MetadataTier.T0;
+    final Tier middleTier = MetadataTier.TA;
+    final Tier highTier = MetadataTier.TC;
 
     assertThrows(NullPointerException.class, () -> new MetadataClassifier(null, null, null));
     assertThrows(NullPointerException.class, () -> new MetadataClassifier(languageClassifier, null, null));
     assertThrows(NullPointerException.class, () -> new MetadataClassifier(languageClassifier, enablingElementsClassifier, null));
 
-    when(languageClassifier.classify(testEntity)).thenReturn(new TierClassification<>(lowTier, new LanguageBreakdown(2,
-        List.of(PropertyType.DC_COVERAGE.name(), PropertyType.DC_DESCRIPTION.name()), lowTier)));
-    when(enablingElementsClassifier.classify(testEntity)).thenReturn(
-        new TierClassification<>(middleTier,
-            new EnablingElements(Collections.emptyList(), Collections.emptyList(), MetadataTier.TC)));
-    when(contextualClassesClassifier.classify(testEntity)).thenReturn(
-        new TierClassification<>(highTier, new ContextualClasses(5,
-            List.of(TimeSpanType.class.getSimpleName(), PlaceType.class.getSimpleName()), MetadataTier.TC)));
+    when(languageClassifier.classifyBreakdown(testEntity)).thenReturn(new LanguageBreakdown(2,
+        List.of(PropertyType.DC_COVERAGE.name(), PropertyType.DC_DESCRIPTION.name()), lowTier));
+    when(enablingElementsClassifier.classifyBreakdown(testEntity)).thenReturn(
+        new EnablingElementsBreakdown(Collections.emptyList(), Collections.emptyList(), middleTier));
+    when(contextualClassesClassifier.classifyBreakdown(testEntity)).thenReturn(
+        new ContextualClassesBreakdown(5,
+            List.of(TimeSpanType.class.getSimpleName(), PlaceType.class.getSimpleName()), highTier));
 
-    final TierClassification<MetadataTier, MetadataTierBreakdown> metadataTierClassification = new MetadataClassifier(
-        languageClassifier,
-        enablingElementsClassifier, contextualClassesClassifier).classify(testEntity);
+    final TierClassification<Tier, MetadataTierBreakdown> metadataTierClassification = new MetadataClassifier(
+        languageClassifier, enablingElementsClassifier, contextualClassesClassifier).classify(testEntity);
     assertEquals(lowTier, metadataTierClassification.getTier());
+    assertNotNull(metadataTierClassification.getClassification());
   }
 }
